BREAKING CHANGE: muevo endpoint de get productos a productoRoutes
